--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,11 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-  </head>
+   </head>
 
   <body>
+  <%= render 'layouts/navigation' %>
+
     <%= yield %>
   </body>
 </html>
