--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,27 +1,36 @@
-<%= form_with(model: post) do |form| %>
-  <% if post.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-        <% post.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+ 
+<% if @post.errors.any? %>
+  <h2>The following errors prevented the article from saving:</h2>
+  <ul>
+  <% @post.errors.full_messages.each do |msg|%>
+  <li><%= msg %></li>
   <% end %>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+  </ul>
+ <% end %>
+ <div class="row">
+  <div class="col-xs-12">
+   <%= form_for(@post, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+   <div class="form-group">
+    <div class="control-label col-sm-2">
+     <%= f.label :title %>
+    </div>
+    <div class="col-sm-6">
+     <%= f.text_field :title, class: "form-control", placeholder: "Title of post", autofocus: true %>
+    </div>
+   </div>
+   <div class="form-group">
+    <div class="control-label col-sm-2">
+     <%= f.label :body %>
+    </div>
+    <div class="col-sm-6">
+     <%= f.text_area :body, rows: 10, class: "form-control", placeholder: "Body of post" %>
+    </div>
+   </div>
+   <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+     <%= f.submit class: 'btn btn-primary btn-large' %>
+    </div>
+   </div>
+ <% end %>
   </div>
-
-  <div>
-    <%= form.label :body, style: "display: block" %>
-    <%= form.text_area :body %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+ </div> 
