--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,14 @@
-<h1>New post</h1>
+<h2><center>New post</center></h2>
 
 <%= render "form", post: @post %>
 
 <br>
 
-<div>
-  <%= link_to "Back to posts", posts_path %>
-</div>
+<div class="form-group">
+     <div class="col-sm-offset-2 col-sm-10">
+     <%= link_to "Back to posts", posts_path %>
+     </div>
+   </div>
+
+ 
+
