--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,23 @@
  
 
-<h1>Listing all post</h1>
-<p>
-<%= link_to "Create new post", new_post_path %>
-</p>
-<table>
- <tr>
-  <th>Title</th>
-  <th>Description</th>
- </tr>
- <% @posts.each do |post| %>
- <tr>
-  <td><%= post.title %></td>
-  <td><%= post.body %></td>
-  <td><%= link_to 'Edit', edit_post_path(post) %></td>
-  <td><%= link_to 'Show', post_path(post) %></td>
-  <td><%= link_to 'Delete', post_path(post), method: :delete, data: {confirm: "Are you sure?"} %></td>
- </tr>
- <% end %>
-</table>
+
+<h1 align="center">Listing all post</h1>
+<% @posts.each do |post| %>
+ <div class="row">
+  <div class="col-xs-8 col-xs-offset-2">
+   <div class="well well-lg">
+    <div class="post-title">
+     <%= link_to post.title, post_path(post) %>
+    </div>
+    <div class="post-body">
+     </div>
+    <div class="post-actions">
+    <p><%= link_to 'Edit', edit_post_path(post), class: "btn btn-xs btn-primary" %> 
+    <%= link_to 'Back', posts_path, class: "btn btn-xs btn-success" %>
+
+    <%= button_to "Destroy this post", @post, method: :delete , class: "btn btn-xs btn-danger" %>
+    </div>
+   </div>
+  </div>
+ </div>
+<% end %>
