--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,8 +5,8 @@
 <br>
 
 <div class="form-group">
-     <div class="col-sm-offset-2 col-sm-10">
-     <%= link_to "Back to posts", posts_path %>
+     <div class="col-sm-offset-2 col-sm-10",   >
+    <%= link_to 'Back', posts_path, class: "btn btn-xs btn-success" %>
      </div>
    </div>
 
