--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,3 @@
- 
-
-
 <h1 align="center">Listing all post</h1>
 <% @posts.each do |post| %>
  <div class="row">
@@ -13,10 +10,8 @@
      </div>
     <div class="post-actions">
     <p><%= link_to 'Edit', edit_post_path(post), class: "btn btn-xs btn-primary" %> 
-    <%= link_to 'Back', posts_path, class: "btn btn-xs btn-success" %>
-
-    <%= button_to "Destroy this post", @post, method: :delete , class: "btn btn-xs btn-danger" %>
-    </div>
+    <%= link_to 'Show', post_path(post), class: "btn btn-xs btn-success" %>
+        <%= link_to 'Delete', post_path(post), method: :delete, data: {confirm: "Are you sure?"} , class: "btn btn-xs btn-danger" %>    </div>
    </div>
   </div>
  </div>
