--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,9 @@
       <ul class="nav navbar-nav">
       <li><%= link_to "Post", posts_path %></li>
       <li><%= link_to "Create Post", new_post_path %></li>
+      <li><%= link_to "About Post", about_path %></li>
+  
+      
      </ul>
        
        
