--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <center><h3 class="center">Title: <%= @post.title %></h3></center>
 <div class="well col-xs-8 col-xs-offset-2">
- <h4 class="center"><strong>Description:</strong></h4>
+ <h4 class="center"><strong>body:</strong></h4>
  <hr>
  <%= @post.body %>
  <hr>
