--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -1,2 +1,3 @@
 <h1> About blog <h1>
-<h4 align="center"><%= link_to 'Home', root_path %></h4>
+ <center><%= link_to 'Home', root_path , class: "btn btn-xs btn-primary" %> <center>
+
