--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
      </div>
      </div>
      <div class="post-meta-details">
-     <small>Created by: <%= post.user.username if post.user %>, <%= time_ago_in_words(post.created_at) %> ago, last updated: <%= time_ago_in_words(post.updated_at) %> ago</small>
+     <small>Created by:   <%= time_ago_in_words(post.created_at) %> ago, last updated: <%= time_ago_in_words(post.updated_at) %> ago</small>
      </div>
      <div class="post-actions">
      <p><%= link_to 'Edit', edit_post_path(post), class: "btn btn-xs btn-primary" %> 
