--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,12 +3,14 @@
 <%= render "form", post: @post %>
 
 <br>
-
-<div class="form-group">
-     <div class="col-sm-offset-2 col-sm-10",   >
-    <%= link_to 'Back', posts_path, class: "btn btn-xs btn-success" %>
-     </div>
+<div class="container-fluid">
+     
+     <center>
+                  <div class="action">
+                  <%= link_to 'Back', posts_path, class: "btn btn-xs btn-success" %>
+                  </div>
+              </center>
    </div>
-
+</div>
  
 
