--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,18 +8,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "  Blog", root_path, class: "navbar-brand", id: "logo" %>
+      <%= link_to "Blog", root_path, class: "navbar-brand", id: "logo" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-       <li><%= link_to "Create Post", new_post_path %></li>
-      <li><%= link_to "About Post", about_path %></li>
-  
-      
+          <li><%= link_to "Create Post", new_post_path %></li>
+             <li><%= link_to "About Post", about_path %></li>
+                     <li> <% if user_signed_in? %>
+                              <%= button_to "Logout", destroy_user_session_path, data: {turbo_method: :delete }, method: :delete, style: "background: none; border: none;", class: "nav-link text-dark" %>
+                           <% else %>
+                              <a class="nav-link text-dark" aria-current="page" href="/users/sign_in">Sign in </a>
+                           <% end %>
+                      </li>
      </ul>
-       
+     
+                  
+                         
        
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
