--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,27 +1,36 @@
-       <div class="row">
-          <div class="col-xs-12">
-               <%= form_for(@post, :html => {class: "form-horizontal", role: "form"}) do |f| %>
-             <div class="form-group">
-               <div class="control-label col-sm-2">
-                 <%= f.label :title %>
-               </div>
-               <div class="col-sm-6">
-                <%= f.text_field :title, class: "form-control", placeholder: "Title of post", autofocus: true %>
+<div class="container h-100">
+   <div class="align-items-center justify-content-center h-100">
+      <div class="col-xs-12 ">
+        <div class="row">
+          <%= form_for(@post, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+              <div class="form-group">
+                  <div class="control-label col-sm-3">
+                    <%= f.label :title %>
+                  </div>
+                <div class="col-sm-6">
+                    <%= f.text_field :title, class: "form-control", placeholder: "Title of post", autofocus: true %>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <div class="control-label col-sm-2">
-                <%= f.label :body %>
+              <div class="form-group">
+                <div class="control-label col-sm-3">
+                  <%= f.label :body %>
+                </div>
+                <div class="col-sm-6">
+                    <%= f.text_area :body, rows: 10, class: "form-control", placeholder: "Body of post" %>
+                </div>
               </div>
-              <div class="col-sm-6">
-                <%= f.text_area :body, rows: 10, class: "form-control", placeholder: "Body of post" %>
+              <div class="form-group">
+                <center>
+                    <div class="action">
+                      <%= f.submit class: 'btn btn-primary btn-large' %>
+                  </div>
+                </center>
               </div>
-            </div>
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <%= f.submit class: 'btn btn-primary btn-large' %>
-            </div>
-          </div>
-       <% end %>
-     </div>
- </div> 
+          <%end%>
+       </div>
+    </div>
+  </div> 
+</div> 
+
+
+ 
