--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,12 @@
-<h1>Editing post</h1>
-
+ <h1 align="center">Editing post</h1>
 <%= render "form", post: @post %>
-
 <br>
+<center>
+  <div class= "container-fluid">
+    <%= link_to "Show this post", @post, class: "btn btn-xs btn-success" %> 
+    <%= link_to "Back to posts", posts_path, class: "btn btn-xs btn-primary"  %>
+  </div>
+</center>
 
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
-</div>
+  
+
